src/styles/components/_hero-banner.scss
.hero-banner {
  @apply h-[94vh] text-center pt-[16vh] space-y-32;

  &__chevron-animation {
    -moz-animation: bounce 2s infinite;
    -webkit-animation: bounce 2s infinite;
    animation: bounce 2s infinite;

    @keyframes bounce {
      0%,
      20%,
      50%,  
      80%,
      100% {
        transform: translateY(0);
      }
      40% {
        transform: translateY(-10px);
      }
      60% {
        transform: translateY(-5px);
      }
    }
  }
}

